style(mobile): prevent pinch-zoom and gray gutters; set maximum-scale=1 and user-scalable=no; enforce dark background on html/body and hide horizontal overflow

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="mask-icon" href="/firstclass-logo.svg" color="#0ea5e9" />
     <meta name="theme-color" content="#000000" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"
+    />
     <title>First Class</title>
   </head>
   <body>
