--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"
     />
-    <title>First Class</title>
+    <title>First Class — Done‑For‑You Content Operations</title>
+    <meta name="description" content="Send us your raw content — we handle strategy, scripting, editing, design, publishing, and follow-ups across every channel. You focus on growth; we run your content machine." />
   </head>
   <body>
     <div id="root"></div>
