feat(admin): editable onboarding panel with Save and Save & Sync to Airtable; add admin onboarding update endpoint; persist onboarding JSON; remove drive fields from schema

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"
     />
     <title>First Class — Done‑For‑You Content Operations</title>
-    <meta name="description" content="Send us your raw content — we handle strategy, scripting, editing, design, publishing, and follow-ups across every channel. You focus on growth; we run your content machine." />
+    <meta name="description" content="Send us your raw content — we handle strategy, captions, editing, design, publishing, and follow-ups across every channel. You focus on growth; we run your content machine." />
   </head>
   <body>
     <div id="root"></div>
